<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical" >

    <include layout="@layout/rel_layout" />

    <FrameLayout
        android:id="@+id/fl_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <com.rjkx.lzl_os.myapp.customview.AutoScrollViewPager
            android:id="@+id/myVp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_head"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="click"
            android:paddingTop="2dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/head_show" />

            <TextView
                android:id="@+id/tv_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_head"
                android:textColor="@color/color_bottom1"
                android:textSize="@dimen/bottom_textSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="click"
            android:paddingTop="2dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/order" />

            <TextView
                android:id="@+id/tv_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_order"
                android:textColor="@color/color_bottom2"
                android:textSize="@dimen/bottom_textSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_love"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="click"
            android:paddingTop="2dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_love"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/love" />

            <TextView
                android:id="@+id/tv_love"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_love"
                android:textColor="@color/color_bottom2"
                android:textSize="@dimen/bottom_textSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_consul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="click"
            android:paddingTop="2dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_consul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/consul" />

            <TextView
                android:id="@+id/tv_consul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_consul"
                android:textColor="@color/color_bottom2"
                android:textSize="@dimen/bottom_textSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_mine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="click"
            android:paddingTop="2dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/mine" />

            <TextView
                android:id="@+id/tv_mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_mine"
                android:textColor="@color/color_bottom2"
                android:textSize="@dimen/bottom_textSize" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>